--- a/app/src/main/res/layout/activity_artwork_detail.xml
+++ b/app/src/main/res/layout/activity_artwork_detail.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,45 +10,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
-            android:background="@color/colorBusinessTab"
-            app:contentScrim="@color/colorBusinessTab"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
+            app:layout_scrollFlags="scroll|enterAlways"
+            android:layout_height="?attr/actionBarSize"
+            app:layout_collapseMode="parallax"
 
-            <ImageView
-                android:id="@+id/backdrop"
-                android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:scaleType="centerCrop"
-                android:layout_gravity="bottom"
-                app:layout_collapseMode="pin" />
-            <TextView
-                android:id="@+id/companyTitleTv"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp"
-                android:alpha="0.7"
-                android:visibility="gone"
-                android:layout_gravity="bottom"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                app:layout_scrollFlags="scroll|enterAlways"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
-        </android.support.design.widget.CollapsingToolbarLayout>
 
         <android.support.design.widget.TabLayout
-            android:id="@+id/tab_fragment_title"
+            android:layout_gravity="bottom"
+            android:id="@+id/tabLayout"
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabIndicatorColor="@color/yellow"
@@ -57,11 +31,17 @@
             />
     </android.support.design.widget.AppBarLayout>
 
+    <com.ares.datacontentlayout.DataContentLayout
+        android:id="@+id/dataLayout"
+        android:layout_marginTop="10dp"
+        android:fitsSystemWindows="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         />
+    </com.ares.datacontentlayout.DataContentLayout>
 </android.support.design.widget.CoordinatorLayout>
