1.优化布局 2.增加有图模式开关

--- a/app/src/main/res/layout/fragment_artwork_info.xml
+++ b/app/src/main/res/layout/fragment_artwork_info.xml
@@ -8,7 +8,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:background="#ffccff"
+        android:background="@color/yellow"
         android:layout_gravity="top"
         android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="7:4"
