--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activity.ArtworkDetailActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -19,31 +17,33 @@
             android:layout_height="?attr/actionBarSize"
             app:layout_collapseMode="parallax"
 
+            app:title="@string/title_about"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
 
-        <android.support.design.widget.TabLayout
-            android:layout_gravity="bottom"
-            android:id="@+id/tabLayout"
-            android:visibility="gone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabIndicatorColor="@color/yellow"
-            app:tabSelectedTextColor="@color/yellow"
-            />
+
     </android.support.design.widget.AppBarLayout>
 
-    <com.ares.datacontentlayout.DataContentLayout
-        android:id="@+id/dataLayout"
-        android:layout_marginTop="10dp"
-        android:fitsSystemWindows="true"
+    <LinearLayout
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
-    </com.ares.datacontentlayout.DataContentLayout>
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:layout_height="wrap_content">
+
+
+
+        <CheckBox
+            android:id="@+id/cb"
+
+            android:text="@string/title_toggle_img"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <View
+            android:layout_marginTop="5dp"
+            android:background="#797979"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"/>
+    </LinearLayout>
+
 </android.support.design.widget.CoordinatorLayout>
