--- a/app/src/main/res/layout/activity_actress_detail.xml
+++ b/app/src/main/res/layout/activity_actress_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActressInfoActivity">
+    tools:context=".activity.ActressInfoActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -17,39 +17,97 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
-            app:title="@string/app_name" />
+            app:title="@string/app_name" >
+            <LinearLayout
+                android:orientation="horizontal"
+
+                android:layout_marginStart="140dp"
+
+                android:layout_width="wrap_content"
+                android:gravity="center_vertical|end"
+                android:layout_height="wrap_content">
+                <Button
+                    android:id="@+id/btnPre"
+                    android:layout_margin="5dp"
+                    android:textSize="12sp"
+                    android:background="@drawable/up_selector"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+                <Button
+                    android:id="@+id/btnNext"
+                    android:layout_margin="5dp"
+                    android:textSize="12sp"
+                    android:background="@drawable/down_selector"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+            </LinearLayout>
+
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
-    <com.ares.datacontentlayout.DataContentLayout
-        android:id="@+id/dataLayout"
+    <HorizontalScrollView
+        android:id="@+id/hsv"
         android:layout_width="match_parent"
-
-        android:layout_gravity="center"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-        <android.support.v7.widget.CardView
+            <com.ares.datacontentlayout.DataContentLayout
+                android:id="@+id/dataLayout"
+                android:layout_width="200dp"
+                android:padding="10dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:orientation="vertical">
 
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/ivCover"
-                android:layout_gravity="center|end"
-                android:background="@color/yellow"
-                android:layout_width="60dp"
-                android:layout_marginEnd="10dp"
-                android:layout_height="60dp" />
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content" />
-        </android.support.v7.widget.CardView>
+                <android.support.v7.widget.CardView
 
-    </com.ares.datacontentlayout.DataContentLayout>
+                    android:layout_marginTop="60dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top|center">
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/rvInfo"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content" />
+
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    app:cardCornerRadius="30dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="top|center_horizontal"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp">
+                    <ImageView
+                        android:id="@+id/ivCover"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:background="@color/yellow" />
+                </android.support.v7.widget.CardView>
+            </com.ares.datacontentlayout.DataContentLayout>
+            <com.ares.datacontentlayout.DataContentLayout
+                android:id="@+id/dataLayout2"
+                android:layout_width="500dp"
+
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rvArtwork"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </com.ares.datacontentlayout.DataContentLayout>
+
+        </LinearLayout>
+    </HorizontalScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
