--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".SearchActivity"
+    tools:context=".activity.SearchActivity"
     tools:showIn="@layout/activity_search">
 
     <android.support.design.widget.TextInputLayout
@@ -18,7 +18,7 @@
             android:id="@+id/etKeyword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="输入关键字" />
+            android:hint="@string/tips_keyword" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -34,7 +34,7 @@
             android:inputType="number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="页码" />
+            android:hint="@string/tips_page" />
 
     </android.support.design.widget.TextInputLayout>
     <RadioGroup
@@ -47,40 +47,43 @@
 
         <RadioButton
             android:id="@+id/rbActress"
-            android:text="艺术家"
+            android:text="@string/rb_title_actress"
             android:checked="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <RadioButton
             android:id="@+id/rbArtwork1"
-            android:text="高保真"
+            android:text="@string/rb_title_modernist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <RadioButton
             android:id="@+id/rbArtwork2"
-            android:text="朦胧美"
+            android:text="@string/rb_title_abstractionism"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </RadioGroup>
     <Button
         android:id="@+id/btnSearch"
-        android:text="搜索"
+        android:text="@string/btn_search"
         app:layout_constraintTop_toBottomOf="@id/rg"
 
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <com.ares.datacontentlayout.DataContentLayout
-        app:layout_constraintTop_toBottomOf="@id/btnSearch"
         android:id="@+id/contentLayout"
-         android:layout_width="match_parent"
+        android:paddingTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/btnSearch"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv"
-            android:background="#ececec"
+            android:id="@+id/rvInfo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+
+            android:layout_height="wrap_content"
+            android:background="#ececec"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     </com.ares.datacontentlayout.DataContentLayout>
 
