--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -10,14 +10,14 @@
     <TextView
         android:id="@+id/tvEmpty"
         android:visibility="gone"
-        android:text="暂无信息"
+        android:text="@string/tips_empty"
         android:gravity="center"
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv"
+        android:id="@+id/rvInfo"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
