--- a/app/src/main/res/layout/activity_actress_detail.xml
+++ b/app/src/main/res/layout/activity_actress_detail.xml
@@ -52,7 +52,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
@@ -62,13 +62,13 @@
                 android:layout_width="200dp"
                 android:padding="10dp"
                 android:layout_height="match_parent"
-                android:layout_gravity="center"
+                android:layout_gravity="start|center"
                 android:orientation="vertical">
 
 
                 <android.support.v7.widget.CardView
 
-                    android:layout_marginTop="60dp"
+                    android:layout_marginTop="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="top|center">
@@ -81,23 +81,13 @@
 
                 </android.support.v7.widget.CardView>
 
-                <android.support.v7.widget.CardView
-                    app:cardCornerRadius="30dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_gravity="top|center_horizontal"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp">
-                    <ImageView
-                        android:id="@+id/ivCover"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:background="@color/yellow" />
-                </android.support.v7.widget.CardView>
             </com.ares.datacontentlayout.DataContentLayout>
+
             <com.ares.datacontentlayout.DataContentLayout
                 android:id="@+id/dataLayout2"
                 android:layout_width="500dp"
 
+                android:layout_marginStart="200dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
@@ -107,7 +97,20 @@
                     android:layout_height="wrap_content" />
             </com.ares.datacontentlayout.DataContentLayout>
 
-        </LinearLayout>
+
+            <android.support.v7.widget.CardView
+                app:cardCornerRadius="30dp"
+                android:layout_marginTop="120dp"
+                android:layout_marginStart="170dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp">
+                <ImageView
+                    android:id="@+id/ivCover"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/avatar" />
+            </android.support.v7.widget.CardView>
+        </FrameLayout>
     </HorizontalScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
