--- a/app/src/main/res/layout/activity_actress_detail.xml
+++ b/app/src/main/res/layout/activity_actress_detail.xml
@@ -100,6 +100,7 @@
 
             <android.support.v7.widget.CardView
                 app:cardCornerRadius="30dp"
+                android:id="@+id/cardView"
                 android:layout_marginTop="120dp"
                 android:layout_marginStart="170dp"
                 android:layout_width="60dp"
