--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -44,13 +44,21 @@
             android:hint="@string/tips_page" />
 
     </android.support.design.widget.TextInputLayout>
+
+        <FrameLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
     <RadioGroup
         android:id="@+id/rg"
         app:layout_constraintTop_toBottomOf="@id/inputPageLayout"
 
+        android:padding="10dp"
+        android:layout_gravity="center_vertical"
         android:orientation="horizontal"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+
 
         <RadioButton
             android:id="@+id/rbActress"
@@ -68,15 +76,24 @@
             android:text="@string/rb_title_abstractionism"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+
     </RadioGroup>
-    <Button
-        android:id="@+id/btnSearch"
-        android:text="@string/btn_search"
-        app:layout_constraintTop_toBottomOf="@id/rg"
+            <Button
+                android:id="@+id/btnSearch"
+                android:text="@string/btn_search"
+                android:layout_marginEnd="10dp"
+                android:layout_gravity="end"
+                android:textColor="#ffffff"
+                android:background="@color/colorPrimary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </FrameLayout>
 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
+        <View
+            android:layout_marginTop="2dp"
+            android:background="@color/colorPrimary"
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"/>
     <com.ares.datacontentlayout.DataContentLayout
         android:id="@+id/contentLayout"
         android:paddingTop="10dp"
