1.增加查看大图的功能 2.引入kapt，修复kotlin无法使用GlideApp的bug

--- a/app/src/main/res/drawable/cover.xml
+++ b/app/src/main/res/drawable/cover.xml
@@ -8,8 +8,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <path
-        android:fillColor="#fde71e"
-        android:strokeColor="#fde71e"
+        android:fillColor="#202929"
+        android:strokeColor="#202929"
         android:pathData="L 0 0, 0 147 147,200 147,0"
 
         />
