--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black_pearl">#202929</color>
+    <color name="theme_color">#202929</color>
     <color name="colorPrimary">#202929</color>
     <color name="colorPrimaryDark">#202929</color>
     <color name="colorAccent">#F73E33</color>
