--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -84,7 +84,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_gravity="end"
                 android:textColor="#ffffff"
-                android:background="@color/colorPrimary"
+                android:background="@drawable/selector_search_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </FrameLayout>
