--- a/app/src/main/res/layout/item_art_work.xml
+++ b/app/src/main/res/layout/item_art_work.xml
@@ -25,13 +25,26 @@
             android:layout_height="wrap_content" />
 
 
+        <FrameLayout
+
+            android:layout_width="147dp"
+            android:layout_height="200dp">
         <ImageView
             android:scaleType="centerCrop"
-            android:background="@color/yellow"
             android:id="@+id/ivCover"
             android:layout_width="147dp"
             android:layout_height="200dp" />
 
+
+        <TextView
+            android:id="@+id/tvTips"
+            android:textColor="#ffffff"
+            android:text="@string/inivisible"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        </FrameLayout>
     <TextView
         android:id="@+id/tvContent"
         android:padding="5dp"
@@ -49,4 +62,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
+
+
 </android.support.v7.widget.CardView>
