--- a/app/src/main/res/layout/item_sample_photo.xml
+++ b/app/src/main/res/layout/item_sample_photo.xml
@@ -9,7 +9,7 @@
         app:layout_constraintDimensionRatio="W,4:7"
 
         android:scaleType="centerCrop"
-        android:background="@color/yellow"
+        android:background="@color/theme_color"
         android:layout_width="match_parent"
         android:layout_height="0dp" />
 </android.support.constraint.ConstraintLayout>
