--- a/datacontentlayout/src/main/res/layout/error_content_layout.xml
+++ b/datacontentlayout/src/main/res/layout/error_content_layout.xml
@@ -19,5 +19,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="点击重试" />
+        android:text="@string/retry" />
 </LinearLayout>
