--- a/datacontentlayout/src/main/res/layout/loading_content_layout.xml
+++ b/datacontentlayout/src/main/res/layout/loading_content_layout.xml
@@ -18,5 +18,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="加载数据中" />
+        android:text="@string/loading" />
 </LinearLayout>
