1.完善国际化 2.增加点击toolbar返回顶部的功能

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/actionAbout" android:title="关于" app:showAsAction="never">
+    <item android:id="@+id/actionAbout" android:title="@string/title_about" app:showAsAction="never">
 
 
     </item>
