--- a/app/src/main/res/layout/activity_actress_detail.xml
+++ b/app/src/main/res/layout/activity_actress_detail.xml
@@ -17,30 +17,52 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
+
             app:title="@string/app_name" >
-            <LinearLayout
-                android:orientation="horizontal"
 
-                android:layout_marginStart="140dp"
+            <RelativeLayout
 
-                android:layout_width="wrap_content"
-                android:gravity="center_vertical|end"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <Button
-                    android:id="@+id/btnPre"
-                    android:layout_margin="5dp"
-                    android:textSize="12sp"
-                    android:background="@drawable/up_selector"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp" />
+                <TextView
+                    android:id="@+id/tvTitle"
+                    android:textColor="#ffffff"
+                    tools:text="haha"
+                    android:textSize="18sp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <ImageButton
+                    android:id="@+id/btnCollect"
+                    android:layout_marginEnd="20dp"
+                    android:visibility="gone"
+
+                    android:background="@drawable/collect_selector"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
                 <Button
                     android:id="@+id/btnNext"
                     android:layout_margin="5dp"
                     android:textSize="12sp"
+                    android:layout_toStartOf="@id/btnCollect"
                     android:background="@drawable/down_selector"
                     android:layout_width="30dp"
                     android:layout_height="30dp" />
-            </LinearLayout>
+
+                <Button
+                    android:id="@+id/btnPre"
+                    android:layout_margin="5dp"
+
+                    android:layout_toStartOf="@id/btnNext"
+                    android:textSize="12sp"
+                    android:background="@drawable/up_selector"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+
+            </RelativeLayout>
 
         </android.support.v7.widget.Toolbar>
 
