--- a/app/src/main/res/layout/activity_artwork_detail.xml
+++ b/app/src/main/res/layout/activity_artwork_detail.xml
@@ -19,7 +19,32 @@
             android:layout_height="?attr/actionBarSize"
             app:layout_collapseMode="parallax"
 
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/tvTitle"
+                    android:textColor="#ffffff"
+                    tools:text="haha"
+                    android:textSize="18sp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <ImageButton
+                    android:id="@+id/btnCollect"
+                    android:visibility="gone"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="20dp"
+                    android:background="@drawable/collect_selector"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </FrameLayout>
+
+        </android.support.v7.widget.Toolbar>
 
 
         <android.support.design.widget.TabLayout
