增加磁力链接搜索

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,4 +6,8 @@
 
 
     </item>
+    <item android:id="@+id/actionCollect" android:title="@string/title_collect_list" app:showAsAction="never">
+
+
+    </item>
 </menu>
