增加磁链接页面

--- a/app/src/main/res/layout/activity_collect.xml
+++ b/app/src/main/res/layout/activity_collect.xml
@@ -24,9 +24,13 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <com.ares.datacontentlayout.DataContentLayout
+        android:id="@+id/dataLayout"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:padding="10dp"
@@ -35,5 +39,5 @@
 
 
     </android.support.v7.widget.RecyclerView>
-
+    </com.ares.datacontentlayout.DataContentLayout>
 </android.support.design.widget.CoordinatorLayout>
