--- a/app/src/main/res/layout/content_search.xml
+++ b/app/src/main/res/layout/content_search.xml
@@ -11,106 +11,112 @@
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/nestedSv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/inputLayout"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp">
 
-        <EditText
-            android:id="@+id/etKeyword"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/tips_keyword" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-    </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/inputLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent">
 
+                <EditText
+                    android:id="@+id/etKeyword"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/tips_keyword" />
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/inputPageLayout"
-        app:layout_constraintTop_toBottomOf="@id/inputLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/etPage"
-            android:inputType="number"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/tips_page" />
-
-    </android.support.design.widget.TextInputLayout>
-
-        <FrameLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-    <RadioGroup
-        android:id="@+id/rg"
-        app:layout_constraintTop_toBottomOf="@id/inputPageLayout"
-
-        android:padding="10dp"
-        android:layout_gravity="center_vertical"
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+            </android.support.design.widget.TextInputLayout>
 
 
-        <RadioButton
-            android:id="@+id/rbActress"
-            android:text="@string/rb_title_actress"
-            android:checked="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <RadioButton
-            android:id="@+id/rbArtwork1"
-            android:text="@string/rb_title_modernist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <RadioButton
-            android:id="@+id/rbArtwork2"
-            android:text="@string/rb_title_abstractionism"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/inputPageLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/inputLayout">
 
-    </RadioGroup>
-            <Button
-                android:id="@+id/btnSearch"
-                android:text="@string/btn_search"
-                android:layout_marginEnd="10dp"
-                android:layout_gravity="end"
-                android:textColor="#ffffff"
-                android:background="@drawable/selector_search_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </FrameLayout>
+                <EditText
+                    android:id="@+id/etPage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/tips_page"
+                    android:inputType="number" />
 
-        <View
-            android:layout_marginTop="2dp"
-            android:background="@color/colorPrimary"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"/>
-    <com.ares.datacontentlayout.DataContentLayout
-        android:id="@+id/contentLayout"
-        android:paddingTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/btnSearch"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            </android.support.design.widget.TextInputLayout>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvInfo"
-            android:layout_width="match_parent"
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-            android:layout_height="wrap_content"
-            android:background="#ececec"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+                <RadioGroup
+                    android:id="@+id/rg"
+                    android:layout_width="wrap_content"
 
-    </com.ares.datacontentlayout.DataContentLayout>
-    </LinearLayout>
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:padding="10dp"
+                    app:layout_constraintTop_toBottomOf="@id/inputPageLayout">
+
+
+                    <RadioButton
+                        android:id="@+id/rbActress"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checked="true"
+                        android:text="@string/rb_title_actress" />
+
+                    <RadioButton
+                        android:id="@+id/rbArtwork1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/rb_title_modernist" />
+
+                    <RadioButton
+                        android:id="@+id/rbArtwork2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/rb_title_abstractionism" />
+
+                </RadioGroup>
+
+                <Button
+                    android:id="@+id/btnSearch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/selector_search_btn"
+                    android:text="@string/btn_search"
+                    android:textColor="#ffffff" />
+            </FrameLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginTop="2dp"
+                android:background="@color/colorPrimary" />
+
+            <com.ares.datacontentlayout.DataContentLayout
+                android:id="@+id/contentLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/btnSearch">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rvInfo"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#ececec"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
+            </com.ares.datacontentlayout.DataContentLayout>
+        </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </android.support.constraint.ConstraintLayout>
