--- a/app/src/main/res/layout/activity_collect.xml
+++ b/app/src/main/res/layout/activity_collect.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".activity.CollectActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -12,32 +14,32 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
+            app:title="@string/title_collect"
             android:layout_width="match_parent"
             app:layout_scrollFlags="scroll|enterAlways"
             android:layout_height="?attr/actionBarSize"
             app:layout_collapseMode="parallax"
 
-            app:title="@string/title_collect_list"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
+        </android.support.v7.widget.Toolbar>
 
 
-
+        <android.support.design.widget.TabLayout
+            android:layout_gravity="bottom"
+            android:id="@+id/tabLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabIndicatorColor="@color/yellow"
+            app:tabSelectedTextColor="@color/yellow"
+            />
     </android.support.design.widget.AppBarLayout>
 
-    <com.ares.datacontentlayout.DataContentLayout
-        android:id="@+id/dataLayout"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_marginTop="10dp"
+        android:fitsSystemWindows="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv"
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:padding="10dp"
-        android:layout_height="wrap_content">
-
-
-
-    </android.support.v7.widget.RecyclerView>
-    </com.ares.datacontentlayout.DataContentLayout>
+        android:layout_height="wrap_content"
+        />
 </android.support.design.widget.CoordinatorLayout>
